log

Thu 14 Mar 2024 02:41:27 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:13:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before numeric constant
   13 |   int maxNum 0;
      |              ^
exercises.c:13:14: error: statement with no effect [-Werror=unused-value]
exercises.c:15:17: error: ‘maxNum’ undeclared (first use in this function)
   15 |     if(arr[i] > maxNum) maxNum = arr[i];
      |                 ^~~~~~
exercises.c:15:17: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:16:17: error: control reaches end of non-void function [-Werror=return-type]
   16 |   return maxNum;}
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
d6c5f51
Thu 14 Mar 2024 02:41:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:13:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before numeric constant
   13 |   int maxNum 0;
      |              ^
exercises.c:13:14: error: statement with no effect [-Werror=unused-value]
exercises.c:15:17: error: ‘maxNum’ undeclared (first use in this function)
   15 |     if(arr[i] > maxNum) maxNum = arr[i];
      |                 ^~~~~~
exercises.c:15:17: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:16:17: error: control reaches end of non-void function [-Werror=return-type]
   16 |   return maxNum;}
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
a245a93
Thu 14 Mar 2024 02:41:54 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
e3fe593
Thu 14 Mar 2024 02:46:49 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:25:7: error: variable ‘tempArr’ set but not used [-Werror=unused-but-set-variable]
   25 |   int tempArr[size];
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5fa3ef0
Thu 14 Mar 2024 02:47:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:27:16: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   27 |     tempArr[i] = arr[size-i-1];
      |                ^
exercises.c:25:8: error: variable ‘tempArr’ set but not used [-Werror=unused-but-set-variable]
   25 |   int *tempArr[size];
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f72e22c
Thu 14 Mar 2024 02:49:33 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:25:7: error: array size missing in ‘tempArr’
   25 |   int tempArr[];
      |       ^~~~~~~
exercises.c:26:20: error: implicit declaration of function ‘sizeeof’ [-Werror=implicit-function-declaration]
   26 |   tempArr = malloc(sizeeof(int) * size);
      |                    ^~~~~~~
exercises.c:26:28: error: expected expression before ‘int’
   26 |   tempArr = malloc(sizeeof(int) * size);
      |                            ^~~
exercises.c:30:7: error: expected expression before ‘]’ token
   30 |   arr[] = tempArr[];
      |       ^
exercises.c:25:7: error: variable ‘tempArr’ set but not used [-Werror=unused-but-set-variable]
   25 |   int tempArr[];
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8ef4698
